--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,4 @@
-#orcid-publications {
+#scholar-publications {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     color: #333;
@@ -37,10 +37,4 @@
 
 .publication-item a:hover {
     text-decoration: underline;
-}
-
-h1 {
-    text-align: center;
-    font-size: 2.5rem;
-    color: #2c3e50;
 }
